pembaruan nama aplikasi

--- a/templates/index.html
+++ b/templates/index.html
@@ -13,25 +13,24 @@
       <div class="card shadow-lg">
         <div class="card-body text-center">
           <h2 class="fw-bold mb-3">
-            Sistem Prediksi Berita Hoaks Berbahasa Indonesia
+            Sistem Prediksi Berita Hoaks Bahasa Indonesia
           </h2>
 
           <p class="text-muted">
             Aplikasi ini dikembangkan sebagai luaran tambahan dari penelitian
             berjudul "Analisis Pengaruh Random Oversampling (ROS) terhadap
-            Kinerja XGBoost dalam Menprediksi Berita Hoaks Berbahasa Indonesia".
+            Kinerja XGBoost dalam Memprediksi Berita Hoaks Berbahasa Indonesia".
             Sistem ini menggunakan model klasifikasi untuk menprediksi apakah
             suatu berita merupakan <b>HOAKS</b> atau <b>ASLI</b>, dengan
-            memanfaatkan algoritma XGBoost yang dioptimalkan menggunakan
-            pendekatan Random Oversampling (ROS) untuk menangani masalah
-            ketidakseimbangan data. Aplikasi ini bertujuan untuk memberikan alat
-            bantu yang efektif dalam mengidentifikasi berita hoaks sehingga
-            dapat membantu masyarakat dalam menyaring informasi yang mereka
-            terima. Dengan antarmuka yang sederhana dan mudah digunakan,
-            pengguna dapat dengan cepat menguji model dan melakukan prediksi
-            terhadap teks berita yang mereka masukkan. Sistem ini diharapkan
-            dapat berkontribusi dalam upaya memerangi penyebaran informasi palsu
-            di Indonesia.
+            memanfaatkan algoritma XGBoost dan pendekatan Random Oversampling
+            (ROS) untuk menangani masalah ketidakseimbangan data. Aplikasi ini
+            bertujuan untuk memberikan alat bantu yang efektif dalam
+            mengidentifikasi berita hoaks sehingga dapat membantu masyarakat
+            dalam menyaring informasi yang mereka terima. Dengan antarmuka yang
+            sederhana dan mudah digunakan, pengguna dapat dengan cepat menguji
+            model dan melakukan prediksi terhadap teks berita yang mereka
+            masukkan. Sistem ini diharapkan dapat berkontribusi dalam upaya
+            memerangi penyebaran informasi palsu di Indonesia.
           </p>
 
           <hr class="my-4" />
